2005-09-17 Francois Proulx <francois.proulx@gmail.com>
	* Fixed forgotten reference to getNetwork in AuthLocalUser
	
2005-09-17 Francois Proulx <francois.proulx@gmail.com>
	* Fixed a few bugs in Radius class
	* Improved syntax and completed 100% of French translations
	
2005-09-17 Francois Proulx <francois.proulx@gmail.com>
	* Fixed RADIUS bug #1287000
	
2005-09-16 Francois Proulx <francois.proulx@gmail.com>
	* Added Mail Classes to circumvent mb_send_mail UTF-8 problems
	* This class provides UTF-8 mailing for validation e-mail, lost password, lost username...
	* Fixes reported bug where users would not receive validation email on some servers

2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Added bytes in words for online users
	
2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in user stats
	
2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Added access permissions for statistics.

2005-09-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* schema_validate.php:  Fix a bug version 26.  The conversion of the old account_origin as a parameter 
	to the authenticator was wrong.  To fix it manually if you already ran the script,
	 you must quote the parameter in column network_authenticator_params in the networks table.
	* RssPressReview.php:  Make expansion of today's item optionnal.

2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check, found a workaround for the file_exists problem
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Added dependency check for Phlickr
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed Flickr support
	* Now using PEAR version of Phlickr
	* Download the latest package and install like this : pear install PhlickrXYZ.tar.gz
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Removed many blank lines after php tags
	* added more checks, for dates etc...